fixed modal overflow

--- a/src/places/components/PlaceItem.css
+++ b/src/places/components/PlaceItem.css
@@ -54,6 +54,6 @@
   }
 }
 .map-container {
-  height: 20rem;
+  height: 10rem;
   width: 100%;
 }
